cabal-version: 2.0
name:           cdm
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      ISDA.CDM.Auxiliary.Event
      ISDA.CDM.Auxiliary.Netting
      ISDA.CDM.EventBuilder.Derived
      ISDA.CDM.EventBuilder.NewTrade
      ISDA.CDM.EventBuilder.Termination
      ISDA.CDM.EventSpecificationModule
      ISDA.CDM.Impl.Contract.Contract
      ISDA.CDM.Impl.Contract.Payout.Cashflow
      ISDA.CDM.Impl.Contract.Payout.ContractualQuantity
      ISDA.CDM.Impl.Contract.Payout.InterestRatePayout.FloatingRate
      ISDA.CDM.Impl.Contract.Payout.InterestRatePayout.InterestRatePayout
      ISDA.CDM.Impl.Contract.Payout.InterestRatePayout.PaymentCalculationPeriod
      ISDA.CDM.Impl.Contract.Payout.InterestRatePayout.Schedule.CalculationPeriodDates
      ISDA.CDM.Impl.Contract.Payout.InterestRatePayout.Schedule.PaymentDates
      ISDA.CDM.Impl.Contract.Payout.InterestRatePayout.Schedule.ResetDates
      ISDA.CDM.Impl.Contract.Payout.Payout
      ISDA.CDM.Impl.Date.AdjustableDate
      ISDA.CDM.Impl.Date.AdjustableOrAdjustedOrRelativeDate
      ISDA.CDM.Impl.Date.AdjustableOrRelativeDate
      ISDA.CDM.Impl.Date.Base
      ISDA.CDM.Impl.Date.BusinessCenters
      ISDA.CDM.Impl.Date.BusinessDayAdjustments
      ISDA.CDM.Impl.Date.DayCountFraction
      ISDA.CDM.Impl.Date.Offset
      ISDA.CDM.Impl.Date.Period
      ISDA.CDM.Impl.Date.RollConvention
      ISDA.CDM.Impl.Event.Event
      ISDA.CDM.Impl.Event.Transfer
      ISDA.CDM.Impl.Identifier
      ISDA.CDM.Impl.Utils
      ISDA.CDM.Types.All
      ISDA.CDM.Types.Classes
      ISDA.CDM.Types.Enums
      ISDA.CDM.Types.EventSpec
      ISDA.CDM.Types.ReferenceData.Fetch
      ISDA.CDM.Types.ReferenceData.HolidayCalendar
      ISDA.CDM.Types.ReferenceData.Key
      ISDA.CDM.Types.ReferenceData.Observation
      ISDA.CDM.Types.ZonedDateTime
  hs-source-dirs: src
  default-extensions:
      DuplicateRecordFields
      DisambiguateRecordFields
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
      ViewPatterns
      RebindableSyntax
      ImplicitPrelude
  ghc-options: -O0
  build-depends:
      daml-stdlib
    , record-hasfield
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Test.Date.AdjustableDate
      Test.Date.Base
      Test.Date.BusinessDayAdjustments
      Test.Date.DayCountFraction
      Test.Date.Offset
      Test.Date.Period
      Test.Date.RollConvention
      Test.Examples
      Test.Main
      Test.Payout.Cashflow
      Test.Payout.ContractualQuantity
      Test.Payout.FloatingRate
      Test.Payout.InterestRatePayout
      Test.Payout.Payout
      Test.ReferenceData
      Test.Schedule.CalculationPeriodDates
      Test.Schedule.PaymentDates
      Test.Schedule.ResetDates
  hs-source-dirs: test
  default-extensions:
      BlockArguments
      DuplicateRecordFields
      DisambiguateRecordFields
      MultiParamTypeClasses
      NamedFieldPuns
      OverloadedStrings
      RecordWildCards
      ScopedTypeVariables
      ViewPatterns
      RebindableSyntax
      ImplicitPrelude
  ghc-options: -O0
  build-depends:
      cdm
    , daml-stdlib
    , record-hasfield
    , hspec
  default-language: Haskell2010