cabal-version: 2.0
name:           daml-stdlib
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      DA.Date
      Prelude
  hs-source-dirs:
      src
  default-extensions:
    MultiParamTypeClasses
    PackageImports
  ghc-options: -O0
  build-depends:
      base
    , text
  default-language: Haskell2010
