cabal-version: 2.0
name:           daml-stdlib
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      DA.Date
      DA.List
      DA.Optional
      DA.Text
      Prelude
  other-modules:
      DA.Internal.Prelude
  hs-source-dirs:
      src
  default-extensions:
      MultiParamTypeClasses
      NoImplicitPrelude
      PackageImports
  ghc-options: -O0
  build-depends:
      base
    , extra
    , text
  default-language: Haskell2010
