cabal-version: 2.0
name:           daml-stdlib
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      DA.Assert
      DA.Date
      DA.List
      DA.Optional
      DA.Text
      Prelude
  other-modules:
      DA.Internal.Prelude
  hs-source-dirs:
      src
  default-extensions:
      ConstraintKinds
      MultiParamTypeClasses
      NoImplicitPrelude
      PackageImports
  ghc-options: -O0
  build-depends:
      base
    , extra
    , tasty
    , tasty-hunit
    , text
    , time
  default-language: Haskell2010
